--- a/R1 (html).html
+++ b/R1 (html).html
@@ -239,7 +239,7 @@
     <!-- HTML Content (same as previous HTML code) -->
     <nav class="navbar">
         <div class="nav-content">
-            <span class="logo">Rajwardhan Bagawade</span>
+            <span class="logo">Your name</span>
             <ul class="nav-links">
                 <li><a href="#about">Description</a></li>
                 <li><a href="#experience">Work Experience</a></li>
